Add Material Angular, loader and pagination

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
-<router-outlet></router-outlet>
+<h1>
+  <a routerLink="/">
+    Todo Frontend
+  </a>
+</h1>
+<main>
+  <ng-container *ngIf="!isLoading; else loader;">
+      <router-outlet></router-outlet>
+  </ng-container>
+  <ng-template #loader>
+    <p>Navigation is loading...</p>
+  </ng-template>
+</main>
