Add ESLint and Prettier config and format code
- Install Prettier
- Install ESLint
- Add ESLint plugins for:
  - Angular
  - Jest
  - TypeScript
  - Prettier
- Add ESLint rules:
  - quotes
  - sort-import
  - no `console.log`

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
 <h1>
-  <a routerLink="/">
-    Todo Frontend
-  </a>
+  <a routerLink="/"> Todo Frontend </a>
 </h1>
 <main>
-  <ng-container *ngIf="!isLoading; else loader;">
-      <router-outlet></router-outlet>
+  <ng-container *ngIf="!isLoading; else loader">
+    <router-outlet></router-outlet>
   </ng-container>
   <ng-template #loader>
     <p>Navigation is loading...</p>
