--- a/src/app/modules/todo/todo-list/todo-list.component.html
+++ b/src/app/modules/todo/todo-list/todo-list.component.html
@@ -1,6 +1,10 @@
 <h1>Todos List</h1>
 <ng-container *ngIf="!isLoading; else loader">
-  <table mat-table [dataSource]="todosDataSource" class="mat-elevation-z8 todos-table">
+  <table
+    mat-table
+    [dataSource]="todosDataSource"
+    class="mat-elevation-z8 todos-table"
+  >
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
 
@@ -17,7 +21,7 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columns"></tr>
-    <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: columns"></tr>
   </table>
 
   <p>
