--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 >
   <div id="extra-links" header>
     <div>
-      <a mat-button href="https://github.com/groovytron/frontend-example">
+      <a mat-button href="https://github.com/groovytron/angular-playground" target="_blank">
         <i class="fab fa-github fa-2x"></i>
       </a>
     </div>
