--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <div>
     <a routerLink="/">
-      <img id="application-logo" src="{{ applicationLogoUrl }}" alt="">
+      <img id="application-logo" src="{{ applicationLogoUrl }}" alt="" />
     </a>
   </div>
   <h1>
