--- a/src/app/modules/todo/todo-list/todo-list.component.html
+++ b/src/app/modules/todo/todo-list/todo-list.component.html
@@ -26,7 +26,7 @@
 
   <p>
     <mat-paginator
-      [length]="todosPagination.count"
+      [length]="todosPagination.totalItems"
       [pageSize]="2"
       [pageIndex]="todosPagination.current - 1"
       (page)="onPageChange($event)"
